[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/gui/hp-bar-under.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/hp-bar-progress.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/heart.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/hp-cont.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/shield.png" type="Texture" id=5]
[ext_resource path="res://materials/hp-font.tres" type="BitmapFont" id=6]
[ext_resource path="res://materials/HP-FONT-small.tres" type="BitmapFont" id=7]
[ext_resource path="res://materials/HP-FONT-thin.tres" type="BitmapFont" id=8]
[ext_resource path="res://scripts/StatusMinimal.gd" type="Script" id=9]

[node name="StatusMinimal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_bottom = -120.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainBackground" type="Panel" parent="."]
margin_left = 307.82
margin_top = 18.1136
margin_right = 360.82
margin_bottom = 43.1136

[node name="Party1" type="Sprite" parent="."]
position = Vector2( 335.332, 47.481 )
rotation = -1.5708
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )
offset = Vector2( -1, -27 )
hframes = 4

[node name="DEF" type="TextureProgress" parent="Party1"]
margin_left = -13.0
margin_top = 10.0
margin_right = 21.0
margin_bottom = 18.0
rect_rotation = 90.0
rect_scale = Vector2( 1.2, 1.2 )
rect_pivot_offset = Vector2( 14.8813, -2.31313 )
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="Party1/DEF"]
margin_left = -6.0
margin_right = 7.0
margin_bottom = 13.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="TextureProgress" parent="Party1"]
margin_left = -20.0
margin_top = 2.0
margin_right = 20.0
margin_bottom = 10.0
rect_rotation = 90.0
rect_scale = Vector2( 1.2, 1.2 )
rect_pivot_offset = Vector2( 20.8813, 5.68687 )
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="Party1/HP"]
margin_left = -5.88412
margin_right = 7.11588
margin_bottom = 13.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Party2" type="Sprite" parent="."]
position = Vector2( 335.332, 62.9366 )
rotation = -1.5708
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )
offset = Vector2( -1, -27 )
hframes = 4

[node name="DEF" type="TextureProgress" parent="Party2"]
margin_left = -13.0
margin_top = 10.0
margin_right = 21.0
margin_bottom = 18.0
rect_rotation = 90.0
rect_scale = Vector2( 1.2, 1.2 )
rect_pivot_offset = Vector2( 14.8813, -2.31313 )
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="Party2/DEF"]
margin_left = -6.0
margin_right = 7.0
margin_bottom = 13.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="TextureProgress" parent="Party2"]
margin_left = -20.0
margin_top = 2.0
margin_right = 20.0
margin_bottom = 10.0
rect_rotation = 90.0
rect_scale = Vector2( 1.2, 1.2 )
rect_pivot_offset = Vector2( 20.8813, 5.68687 )
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="Party2/HP"]
margin_left = -5.88412
margin_right = 7.11588
margin_bottom = 13.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Who" type="Sprite" parent="."]
position = Vector2( 337.834, 12.5 )
texture = ExtResource( 4 )
hframes = 4

[node name="HP" type="TextureProgress" parent="Who"]
margin_left = -18.0
margin_top = 8.0
margin_right = 22.0
margin_bottom = 21.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="Who/HP"]
margin_left = -7.87455
margin_right = 5.12545
margin_bottom = 13.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Who/HP"]
margin_left = 2.0
margin_top = 3.0
margin_right = 40.0
margin_bottom = 10.0
custom_fonts/bold_italics_font = ExtResource( 6 )
custom_fonts/bold_font = ExtResource( 8 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[b]999[i]/[/i][/b]999"
text = "999/999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DEF" type="TextureProgress" parent="Who"]
margin_left = -12.0
margin_top = 21.0
margin_right = 22.0
margin_bottom = 29.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="Who/DEF"]
margin_left = -6.0
margin_right = 7.0
margin_bottom = 13.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Party3" type="Sprite" parent="."]
position = Vector2( 335.332, 78.274 )
rotation = -1.5708
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )
offset = Vector2( -1, -27 )
hframes = 4

[node name="DEF" type="TextureProgress" parent="Party3"]
margin_left = -13.0
margin_top = 10.0
margin_right = 21.0
margin_bottom = 18.0
rect_rotation = 90.0
rect_scale = Vector2( 1.2, 1.2 )
rect_pivot_offset = Vector2( 14.8813, -2.31313 )
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="Party3/DEF"]
margin_left = -6.0
margin_right = 7.0
margin_bottom = 13.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="TextureProgress" parent="Party3"]
margin_left = -20.0
margin_top = 2.0
margin_right = 20.0
margin_bottom = 10.0
rect_rotation = 90.0
rect_scale = Vector2( 1.2, 1.2 )
rect_pivot_offset = Vector2( 20.8813, 5.68687 )
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="Party3/HP"]
margin_left = -5.88412
margin_right = 7.11588
margin_bottom = 13.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
